--- a/prophet.ipynb
+++ b/prophet.ipynb
@@ -10,10 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "2c4197d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\thach\\anaconda3\\envs\\notebook-6.4.12\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Importing plotly failed. Interactive plots will not work.\n"
+     ]
+    }
+   ],
    "source": [
     "# uncomment to pip install libraries if libraries are not installed\n",
     "#!pip install pandas prophet numpy scikit-learn seaborn fastf1\n",
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "ee5774e0",
    "metadata": {},
    "outputs": [],
@@ -61,7 +71,7 @@
     "\n",
     "# keep only 2022–2024\n",
     "df_cases_per_day_2022_2024 = df_cases_per_day[\n",
-    "    df_cases_per_day['A&E Admit Date'].dt.year.isin([2021, 2022, 2023, 2024])\n",
+    "    df_cases_per_day['A&E Admit Date'].dt.year.isin([2022, 2023, 2024])\n",
     "]\n",
     "\n",
     "# sort by date\n",
@@ -75,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "ecd338eb",
    "metadata": {},
    "outputs": [
@@ -85,80 +95,6 @@
      "text": [
       "req         WARNING \tDEFAULT CACHE ENABLED! (104.0 KB) C:\\Users\\thach\\AppData\\Local\\Temp\\fastf1\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ds</th>\n",
-       "      <th>y</th>\n",
-       "      <th>f1_event</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-01-01</td>\n",
-       "      <td>285</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021-01-02</td>\n",
-       "      <td>296</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2021-01-03</td>\n",
-       "      <td>328</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2021-01-04</td>\n",
-       "      <td>400</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2021-01-05</td>\n",
-       "      <td>334</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          ds    y  f1_event\n",
-       "0 2021-01-01  285         0\n",
-       "1 2021-01-02  296         0\n",
-       "2 2021-01-03  328         0\n",
-       "3 2021-01-04  400         0\n",
-       "4 2021-01-05  334         0"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -194,9 +130,39 @@
     "    .ffill(limit=2)\n",
     "    .fillna(0)\n",
     "    .astype(int)\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8cd51154",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "df_cases_per_day_2022_2024.head()"
+    "def moe_school_holidays():\n",
+    "    # list manually obtained from MOE website\n",
+    "    moe_holidays_list = [\n",
+    "        #['13-03-2021', '20-01-2021'], ['29-05-2021', '27-06-2021'], ['04-09-2021', '12-09-2021'], ['20-11-2021', '31-12-2021'],\n",
+    "        ['12-03-2022', '20-03-2022'], ['28-05-2022', '26-06-2022'], ['03-09-2022', '11-09-2022'], ['19-11-2022', '31-12-2022'], \n",
+    "        ['11-03-2023', '19-03-2023'], ['27-05-2023', '25-06-2023'], ['02-09-2023', '10-09-2023'], ['18-11-2023', '31-12-2023'],\n",
+    "        ['09-03-2024', '17-03-2024'], ['25-05-2024', '23-06-2024'], ['31-08-2024', '08-09-2024'], ['16-11-2024', '31-12-2024']\n",
+    "    ]\n",
+    "    temp_list = []\n",
+    "    for date in moe_holidays_list:\n",
+    "        date_range = pd.date_range(start=pd.to_datetime(date[0], dayfirst=True), \n",
+    "                                       end=pd.to_datetime(date[1], dayfirst=True))\n",
+    "        temp_list.append(pd.Series(date_range))\n",
+    "    df_moe_school_holidays = pd.DataFrame(pd.concat(temp_list), columns=['ds'])\n",
+    "    df_moe_school_holidays['school_holiday'] = 1\n",
+    "    return df_moe_school_holidays\n",
+    "\n",
+    "df_moe_school_holidays = moe_school_holidays()\n",
+    "\n",
+    "# add moe school holidays feature (does not include poly)\n",
+    "df_cases_per_day_2022_2024 = pd.merge(df_cases_per_day_2022_2024, df_moe_school_holidays, how='left', on='ds')\n",
+    "df_cases_per_day_2022_2024['school_holiday'] = df_cases_per_day_2022_2024['school_holiday'].fillna(0).astype(int)\n"
    ]
   },
   {
@@ -209,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "7370d9b3",
    "metadata": {},
    "outputs": [
@@ -217,41 +183,41 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16:05:41 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "16:05:41 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "09:43:01 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "09:43:01 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<prophet.forecaster.Prophet at 0x14e03460970>"
+       "<prophet.forecaster.Prophet at 0x15ecf52ea40>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m = Prophet()\n",
-    "year_list = [2021, 2022, 2023, 2024]\n",
+    "year_list = [2022, 2023, 2024]\n",
     "sg_holidays = make_holidays_df(year_list=year_list, country='SG')\n",
     "sg_holidays['lower_window'] = -2\n",
     "sg_holidays['upper_window'] = 1\n",
-    "m = Prophet(holidays=sg_holidays)\n",
+    "m = Prophet(holidays=sg_holidays, seasonality_mode='multiplicative')\n",
     "m.add_regressor('f1_event')\n",
+    "#m.add_regressor('school_holiday')\n",
     "m.fit(df_cases_per_day_2022_2024)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "bc4d31be",
    "metadata": {},
    "outputs": [],
    "source": [
     "# test model using cross-validation\n",
-    "df_cv = cross_validation(m, initial='1094 days', period='1 days', horizon='3 days', parallel=\"processes\")"
+    "df_cv = cross_validation(m, initial='729 days', period='1 days', horizon='3 days', parallel=\"processes\")"
    ]
   },
   {
@@ -264,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "12b4e101",
    "metadata": {},
    "outputs": [
@@ -303,35 +269,35 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1 days</td>\n",
-       "      <td>596.158729</td>\n",
-       "      <td>24.416362</td>\n",
-       "      <td>19.226424</td>\n",
-       "      <td>0.051895</td>\n",
-       "      <td>0.043803</td>\n",
-       "      <td>0.051635</td>\n",
-       "      <td>0.771978</td>\n",
+       "      <td>565.204609</td>\n",
+       "      <td>23.774032</td>\n",
+       "      <td>18.596750</td>\n",
+       "      <td>0.050590</td>\n",
+       "      <td>0.042252</td>\n",
+       "      <td>0.050093</td>\n",
+       "      <td>0.744505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2 days</td>\n",
-       "      <td>591.356468</td>\n",
-       "      <td>24.317822</td>\n",
-       "      <td>19.175334</td>\n",
-       "      <td>0.051694</td>\n",
-       "      <td>0.043411</td>\n",
-       "      <td>0.051490</td>\n",
-       "      <td>0.788462</td>\n",
+       "      <td>555.362904</td>\n",
+       "      <td>23.566139</td>\n",
+       "      <td>18.545699</td>\n",
+       "      <td>0.050396</td>\n",
+       "      <td>0.041380</td>\n",
+       "      <td>0.049962</td>\n",
+       "      <td>0.744505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3 days</td>\n",
-       "      <td>578.757674</td>\n",
-       "      <td>24.057383</td>\n",
-       "      <td>19.053340</td>\n",
-       "      <td>0.051460</td>\n",
-       "      <td>0.042396</td>\n",
-       "      <td>0.051213</td>\n",
-       "      <td>0.785714</td>\n",
+       "      <td>541.538528</td>\n",
+       "      <td>23.270980</td>\n",
+       "      <td>18.436156</td>\n",
+       "      <td>0.050216</td>\n",
+       "      <td>0.041073</td>\n",
+       "      <td>0.049725</td>\n",
+       "      <td>0.755495</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -339,17 +305,17 @@
       ],
       "text/plain": [
        "  horizon         mse       rmse        mae      mape     mdape     smape  \\\n",
-       "0  1 days  596.158729  24.416362  19.226424  0.051895  0.043803  0.051635   \n",
-       "1  2 days  591.356468  24.317822  19.175334  0.051694  0.043411  0.051490   \n",
-       "2  3 days  578.757674  24.057383  19.053340  0.051460  0.042396  0.051213   \n",
+       "0  1 days  565.204609  23.774032  18.596750  0.050590  0.042252  0.050093   \n",
+       "1  2 days  555.362904  23.566139  18.545699  0.050396  0.041380  0.049962   \n",
+       "2  3 days  541.538528  23.270980  18.436156  0.050216  0.041073  0.049725   \n",
        "\n",
        "   coverage  \n",
-       "0  0.771978  \n",
-       "1  0.788462  \n",
-       "2  0.785714  "
+       "0  0.744505  \n",
+       "1  0.744505  \n",
+       "2  0.755495  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,23 +324,6 @@
     "# evaluate test cross-validation results\n",
     "df_performance = performance_metrics(df_cv)\n",
     "df_performance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb8f3865",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODAY (9 Dec) TO-DO LIST:\n",
-    "# Make function to find best params for b/f fill f1 event\n",
-    "# Use same function for model params, seasonality + other 2 scales\n",
-    "# School holiday data\n",
-    "# Weather data\n",
-    "# Start Write report\n",
-    "# SIT Application\n",
-    "# Email Mr. Surojit Testimonial"
    ]
   },
   {
@@ -387,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "df14a940",
    "metadata": {},
    "outputs": [
@@ -427,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "6e6df1a8",
    "metadata": {},
    "outputs": [
@@ -469,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "a619142a",
    "metadata": {},
    "outputs": [
